THRIFT-3778 go client can not pass method parameter to server of other language